--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-# OPENAI_API_KEY=sk-QHtbCyI00a5OX7_FRy4tM2EhyfM8u45uBfKYxPqEgGT3BlbkFJlwa-s2ya9cDGQrfRKab6M18Irt0ChFZb-RVBpYTSIA
+# OPENAI
+#_API_KEY
+# =sk-QHtbCyI00a5OX7_FRy4tM2EhyfM8u45uBfKYxPqE
+#gGT3BlbkFJlwa-s2ya9cDGQrfRKab6M18Irt0ChFZb-RVBpYTSIA
